# election-insight-canada

./: .gitignore  README.md  package.json
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: ridings.py
backend/app/schemas/: ridings.py
backend/common/: paths.py  sql.py
backend/db/: schema.sql
backend/db/queries/: get_all_riding_results_for_an_election.sql  get_candidates.sql  get_political_parties.sql  get_polling_divisions.sql  insert_a_district.sql  insert_an_election.sql  insert_candidates.sql  insert_political_parties.sql  insert_polling_divisions.sql  insert_vote_counts.sql
backend/loaders/: cleaning.py  constants.py  extractors.py  inserts.py  lookups.py  sql.py
backend/scripts/: create_tables.py  load_2025_csv.py  read_elections_data.py
backend/tests/app/: test_main.py
backend/tests/app/api/: test_ridings.py
docs/: elections-canada-data-dictionary.md  todo.md
frontend/: README.md  index.html  package.json
frontend/src/: App.vue
