[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.4.4",
    "pandas==3.0.2",
    "psycopg2-binary==2.9.12",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "six==1.17.0",
]
