[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pandas-stubs>=3.0.3.260530",
    "psycopg2-binary==2.9.12",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "six==1.17.0",
    "types-psycopg2>=2.9.21.20260518",
    "uvicorn[standard]>=0.46.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

